slightly fix vertical alignment of "Enquire now" button

--- a/assets/targets/components/enquiry/_enquiry.scss
+++ b/assets/targets/components/enquiry/_enquiry.scss
@@ -28,6 +28,7 @@
       a {
         @include rem(line-height, 30px);
         @include rem(margin-left, 10px);
+        vertical-align: middle;
       }
 
       @include breakpoint(desktop) {
